--- a/client/src/global.css
+++ b/client/src/global.css
@@ -11,6 +11,8 @@ body {
     font: 400 14px Roboto, sans-serif;
     background: #f0f0f5;
     -webkit-font-smoothing: antialiased;
+    display: flex;
+    justify-content: center;
 
 }
 input, button, textarea {
