--- a/client/src/global.css
+++ b/client/src/global.css
@@ -31,7 +31,17 @@ form input {
     border-radius: 8px;
     padding: 0 24px;
 }
-
+textarea {
+    margin-top: 0.7vw;
+    resize: vertical;
+    width: 100%;
+    min-height: 140px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
+}
 .button {
     width: 100%;
     height: 60px;
